Changed the colours of the pallete to make sure I get good contrast with all my colours for the website

--- a/cybersecurity.css
+++ b/cybersecurity.css
@@ -2,8 +2,8 @@
 body {
     margin: 0;
     font-family: sans-serif;
-    background-color: #eeeeee;
-    color: #217eaa;
+    background-color: #ffffff;
+    color: #185772
     line-height: 1.6;
 }
 
@@ -11,7 +11,7 @@ body {
 .container {
     max-width: 1100px;
     margin: 2rem auto;
-    background-color: #f2f2f3;
+    background-color: #ffffff;
     padding: 2rem;
     border-radius: 10px;
     box-shadow: 0 6px 12px rgba(33, 126, 170, 0.15);
@@ -22,7 +22,7 @@ nav.nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #217eaa;
+    background-color: #144961;
     padding: 1rem 2rem;
     border-radius: 8px;
     margin-bottom: 2rem;
@@ -44,11 +44,11 @@ nav.nav {
 .nav-logo-text {
     font-size: 1.5rem;
     font-weight: 700;
-    color: #f2f2f3;
+    color: #ffffff;
 }
 
 .nav-right a {
-    color: #f2f2f3;
+    color: #ffffff;
     text-decoration: none;
     font-weight: 600;
     font-size: 1.1rem;
@@ -57,7 +57,7 @@ nav.nav {
 }
 
 .nav-right a:hover {
-    color: #8ca4ac;
+    color:#EBE5E5;
     text-shadow: 1px 1px 3px rgba(0,0,0,0.3);
 }
 
@@ -94,7 +94,7 @@ nav.nav {
 
 /* Headings & Paragraphs */
 h1, h2 {
-    color: #125d83;
+    color:#01506F;
     font-weight: 700;
     margin-top: 0;
 }
@@ -104,19 +104,19 @@ h1 { font-size: 2.5rem; margin-bottom: 1rem; }
 .recommendationsh2 { font-size: 1.8rem; margin-bottom: 1rem; text-decoration: blue;}
 
 .recommendationsh2:hover {
-    color: #0787c3;
+    color: #012B3C;
 }
 
 .recommendationshyperlinkunderline {
-    color: #0787c3;
+    color: #012B3C;
 }
 
 
-p { font-size: 1.1rem; color: #217eaa; margin-bottom: 1rem; }
+p { font-size: 1.1rem; color:#01506F; margin-bottom: 1rem; }
 
 /* Footer */
-footer {
-    background-color: #217eaa;
+footer {  
+    background-color: #144961;
     padding: 1rem 2rem;
     text-align: center;
     border-radius: 5px;
@@ -124,7 +124,7 @@ footer {
 }
 
 footer p, footer a {
-    color: #f2f2f3;
+    color: #ffffff;
     font-weight: 600;
     text-decoration: none;
 }
@@ -145,7 +145,7 @@ footer a:hover { text-decoration: underline; }
 .contact-form textarea {
     padding: 0.8rem;
     border-radius: 6px;
-    border: 1px solid #217eaa;
+    border: 1px solid #144961;
     font-size: 1rem;
     width: 100%;
     box-sizing: border-box;
@@ -153,8 +153,8 @@ footer a:hover { text-decoration: underline; }
 
 .contact-form button {
     padding: 0.8rem;
-    background-color: #217eaa;
-    color: #f2f2f3;
+    background-color: #144961;
+    color: #ffffff;
     border: none;
     border-radius: 6px;
     font-weight: 600;
@@ -164,7 +164,7 @@ footer a:hover { text-decoration: underline; }
 }
 
 .contact-form button:hover {
-    background-color: #125d83;
+    background-color: #014560;
     transform: translateY(-2px);
 }
 
